[project]
name = "tcc-samuel"
version = "0.1.0"
description = "Tcc a respeito de modelagem de series temporais de equipamentos de instrumentacao analitica"
authors = [
    {name = "Marcos Vinicius melo de Oliveira, Samuel valdomiro de lima filho"}
]
license = {text = "Open source"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.4.0,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "prophet (>=1.2.1,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyterlab (>=4.5.1,<5.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "plotly (>=6.5.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
